tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/set_header/a/to_b/_test_context/VirtualService.865719839.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - b
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: b
